[package]
name = "toast"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { git = "https://github.com/yaahc/color-eyre", branch = "panic-msg" }
owo-colors = "*"
salsa = "0.15.2"
serde = "1.0.115"
serde_json = "1.0.57"
string_cache = "*"
structopt = { version = "0.3.15" }
svgcleaner = { version = "^0.9.5" }
thiserror = "1.0.20"
tracing = "0.1.19"
walkdir = "2"
swc = { git = "https://github.com/swc-project/swc" }
swc_atoms = { git = "https://github.com/swc-project/swc" }
swc_ecma_ast = { git = "https://github.com/swc-project/swc" }
swc_ecma_codegen = { git = "https://github.com/swc-project/swc" }
swc_ecma_parser = { git = "https://github.com/swc-project/swc" }
swc_ecma_preset_env = { git = "https://github.com/swc-project/swc" }
swc_ecma_transforms = { git = "https://github.com/swc-project/swc" }
swc_ecma_visit = { git = "https://github.com/swc-project/swc" }
swc_visit = { git = "https://github.com/swc-project/swc" }
url = "2.1.1"
sys-info = "0.7.0"

[dependencies.swc_common]
git = "https://github.com/swc-project/swc"
features = ["tty-emitter"]
